Fix website wrapping on mobile

--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -26,6 +26,7 @@ footer {
 
 		& .contact {
 			grid-area: right;
+			word-break: break-word;
 
 			& a {
 				text-decoration: none;
